k8s/zcp-iam-deployment-ibm.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zcp-iam
  namespace: zcp-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: zcp-iam
    spec:
      tolerations:
      - key: "management"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
              - key: role
                operator: In
                values:
                - "management"
      containers:
      - name: zcp-iam
        image: registry.au-syd.bluemix.net/cloudzcp/zcp-iam:1.0.0
        imagePullPolicy: Always
        ports:
        - name: cont-port
          containerPort: 8181
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "800m"
        volumeMounts:
        - mountPath: /etc/localtime
          name: timezone
      serviceAccount: zcp-system-admin
      serviceAccountName: zcp-system-admin
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
        name: timezone
---

apiVersion: v1
kind: Service
metadata:
  name: zcp-iam
  labels:
    name: zcp-iam
  namespace: zcp-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    component: zcp-iam
